# tauri_liangongbao2024

./: README.md  package-lock.json  package.json
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: get_qrcode_url.rs  http_utils.rs  main.rs
src/components/: HelloWorld.vue
