[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.7", features = [] }
reqwest = { version = "0.12.4", features = ["json"] }
rand = "0.8.5"
scraper = "0.19.0"
url = "2.5.0"
tokio = { version = "1.38.0", features = ["full"] }
anyhow = "1.0"
image = "0.25.1"
qrcode = "0.14.0"
bardecoder = "0.5.0"
chrono = "0.4.38"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[package.metadata.bundle.windows]
show_console = true
